fetch labels when not in ontology/topics (#879)

--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -81,6 +81,13 @@
 
 .AppSK .ais-RefinementList-labelText {
   font-size:12px;
+  white-space: normal;
+  text-overflow: inherit;
+}
+
+.AppSK .ais-RefinementList-labelText > span {
+  line-height: 18px;
+  display: inline-flex;
 }
 
 .AppSK .ais-RefinementList-showMore {
