--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -239,6 +239,26 @@
 }
 
 
+.AppSK .result .thumb.hasImg a::before {
+  content:none;
+} 
+
+.AppSK .result .thumb.hasImg a .img {
+  width:130px;
+  height:130px;
+  box-shadow: 0 1px 4px #cecece;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background:black;
+  overflow: hidden;
+}
+
+.AppSK .result .thumb.hasImg a img {
+  height:130px;
+}
+
+
 .AppSK .result .num-box { width:22px;height:22px;border: 2px solid rgba(10,20,30,0.5); font-size:9px;color:rgba(10,20,30,0.75);font-weight:700;
    display:inline-block;align-items: center;justify-content: center; box-sizing: border-box; cursor:pointer;line-height: 18px; text-align: center;
    flex-shrink: 0;
