--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -341,10 +341,18 @@
   font-size:10px;
   line-height:14px;
   color:black;
-  font-weight: 600;
-
+  font-weight: 400;
+  text-align: center;
+}
+.AppSK:not(#a) .result .thumb a .RID ~ span span{
+  font-weight:700;
 }
 
+.AppSK .ais-HitsPerPage-select:focus, 
+.AppSK .ais-SortBy-select:focus {
+  border-color:#d73443;
+  box-shadow: none;
+}
 
 .AppSK:not(#a) .result .thumb.hasImg a {
 }
